<?xml version="1.0" encoding="UTF-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/welcome_page_margin_vertical"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/welcome_page_margin_vertical"
        android:layout_marginBottom="@dimen/welcome_page_margin_vertical"
        android:layout_marginStart="@dimen/welcome_page_margin_horizontal"
        android:layout_marginEnd="@dimen/welcome_page_margin_horizontal"
        android:text="@string/select_video"
        android:textColor="#000000"
        android:textSize="@dimen/welcome_page_font_size"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sample_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/welcome_page_margin_horizontal"
        android:layout_marginEnd="@dimen/welcome_page_margin_horizontal"
        android:layout_marginBottom="@dimen/welcome_page_margin_vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/welcome_page_margin_horizontal"
        android:layout_marginEnd="@dimen/welcome_page_margin_horizontal"
        android:orientation="vertical">

      <TextView
          android:id="@+id/main_offline_availability"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/welcome_page_margin_horizontal"
          android:layout_marginEnd="@dimen/welcome_page_margin_horizontal"
          android:layout_marginBottom="@dimen/welcome_page_margin_vertical"
          android:text=""
          android:textSize="@dimen/offline_availability_text_size"/>

      <TextView
          android:id="@+id/main_download_progress"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/welcome_page_margin_horizontal"
          android:layout_marginEnd="@dimen/welcome_page_margin_horizontal"
          android:layout_marginBottom="@dimen/welcome_page_margin_vertical"
          android:visibility="gone"
          android:textSize="@dimen/download_progress_text_size"/>

      <Button
          android:id="@+id/main_button_download"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          android:text="@string/download"/>

      <Button
          android:id="@+id/main_button_delete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          android:text="@string/delete"/>

      <Button
          android:id="@+id/main_button_play"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/play"/>

      <Button
          android:id="@+id/main_button_save"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          android:text="@string/request_license"/>

      <Button
          android:id="@+id/main_button_play_offline"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          android:text="@string/play_offline"/>

      <Button
          android:id="@+id/main_button_remove_license"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          android:text="@string/remove_license"/>

      <Button
          android:id="@+id/main_button_remove_all"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          android:text="@string/remove_all"/>

    </LinearLayout>

  </LinearLayout>

</androidx.core.widget.NestedScrollView>